添加自己的Thread类，用于资源管理

--- a/MMMMPlayer/CMakeLists.txt
+++ b/MMMMPlayer/CMakeLists.txt
@@ -3,7 +3,14 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
+
+
 # 将源代码添加到此项目的可执行文件。
 add_executable (MMMMPlayer "MMMMPlayer.cpp" "MMMMPlayer.h")
 
+#添加头文件依赖库（不需要编译，h文件）
+include_directories(../)
+
+#添加链接依赖库（编译cpp文件）
+target_link_libraries(MMMMPlayer MMMMThread)
 # TODO: 如有需要，请添加测试并安装目标。
